<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:paddingStart="15dp"
        android:text="@string/about_title"
        android:textColor="@color/white2"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_text"
        android:gravity="fill"
        android:padding="15dp"
        android:paddingBottom="5dp"
        android:textColor="@color/white2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_text_2"
        android:gravity="fill"
        android:padding="15dp"
        android:paddingBottom="5dp"
        android:textColor="@color/white2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/authors"
        android:gravity="fill"
        android:padding="15dp"
        android:paddingBottom="5dp"
        android:textColor="@color/white2" />

</LinearLayout>