<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/user_profile_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_profile_title"
        android:textColor="@color/white2"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="10dp"
        />

    <EditText
        android:id="@+id/age"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintTop_toBottomOf="@+id/user_profile_title"
        android:textColor="@color/white2"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/colorAccent"
        android:hint="@string/age" />
    <EditText
        android:id="@+id/formation"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintTop_toBottomOf="@+id/age"
        android:textColor="@color/white2"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/colorAccent"
        android:hint="@string/formation"/>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="5dp"
        android:text="@string/user_profile_disclaimer"
        android:textColor="@color/white2"
        app:layout_constraintBottom_toTopOf="@+id/disclaimer"
        />

    <TextView
        android:id="@+id/disclaimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/user_profile_disc_2"
        android:textColor="@color/white2"
        app:layout_constraintBottom_toTopOf="@+id/submit_button"
        />
    
    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/button_user_profile"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:onClick="saveUserProfile"/>

</android.support.constraint.ConstraintLayout>