<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tutorial_title"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="20dp"
            android:paddingStart="15dp"
            android:textColor="@color/white2"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white2"
            android:textSize="15sp"
            android:padding="15dp"
            android:text="@string/tutorial_step1"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:srcCompat="@drawable/tutorial1"
            android:maxWidth="80dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white2"
            android:textSize="15sp"
            android:padding="15dp"
            android:text="@string/tutorial_step2"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white2"
            android:textSize="15sp"
            android:padding="15dp"
            android:text="@string/tutorial_step3"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:srcCompat="@drawable/tutorial2"
            android:maxWidth="80dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white2"
            android:textSize="15sp"
            android:padding="15dp"
            android:text="@string/tutorial_step4"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:srcCompat="@drawable/tutorial_envy_btn"
            android:maxWidth="80dp"/>
    </LinearLayout>

</ScrollView>