<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.tndnc.equity.activities.MainMenuActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingBottom="20dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:adjustViewBounds="true"
            android:maxWidth="150dp"
            app:layout_constraintBottom_toTopOf="@+id/button_play"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <Button
            android:id="@+id/button_play"
            style="@style/AppTheme.RoundedCornerMaterialButton"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="40dp"
            android:onClick="levelSelect"
            android:text="@string/button_play_main"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/button_tutorial"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="80dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="20dp"
            android:text="@string/button_tutorial"
            android:onClick="startTutorial"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_play" />

        <Button
            android:id="@+id/button_profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="80dp"
            android:layout_marginStart="80dp"
            android:onClick="startUserProfile"
            android:text="@string/button_profile"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_tutorial" />

        <Button
            android:id="@+id/button_about"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="80dp"
            android:layout_marginStart="80dp"
            android:onClick="startAbout"
            android:text="@string/button_about"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_profile" />

    </android.support.constraint.ConstraintLayout>

</RelativeLayout>
